--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"target": "esnext",
 		"moduleResolution": "node",
 		"jsx": "preserve",
+		"typeRoots": ["typings"],
 		"allowSyntheticDefaultImports": true,
 		"importsNotUsedAsValues": "error",
 		/* more strict checking for errors that per-file transpilers like `esbuild` would crash */
